--- a/.github/workflows/check-gbstudio-develop.yml
+++ b/.github/workflows/check-gbstudio-develop.yml
@@ -29,7 +29,7 @@ jobs:
     name: Build latest develop
     uses: ./.github/workflows/build-container-image.yml
     needs: check-develop
-    if: (vars.GBSTUDIO_LATEST_DEVELOP_COMMIT != needs.check-develop.outputs.latest-commit-sha)
+    if: (vars.GBSTUDIO_LATEST_DEVELOP_COMMIT != needs.check-develop.outputs.latest-commit-sha) || (inputs.force_rebuild == 'true')
     permissions:
       contents: read
       packages: write
